--- a/index.html
+++ b/index.html
@@ -21,6 +21,22 @@
             <i class="fas fa-bolt"></i>
         </div>
     </div>
+
+    <header class="welcome-header">
+        <h1 class="welcome-header__title">Welcome to Kokoa Clone</h1>
+        <p class="welcome-header__text">If you have a Kokoa Account, log in with your email or phone number.</p>
+    </header> 
+    <!-- header: div 대체 태그 -->
+
+    <form id="login-form">
+        <input type="text" placeholder="Email or phone number"/>
+        <input type="password" placeholder="Password"/>
+        <input type="submit">
+        <a href="#">Find Kokoa Account or Password</a>
+    </form>
+
+    
+
     <script src="https://kit.fontawesome.com/6478f529f2.js"
     crossorigin="anonymous"></script>
 </body>
