--- a/friends.html
+++ b/friends.html
@@ -23,6 +23,18 @@
         </div>
     </div>
 
+    <header class="screen-header">
+        <h1 class="screen-header__title">FRIENDS</h1>
+        <div class="screen-header__icons">
+            <span><i class="fas fa-user fa-lg"></i></span>
+            <span><i class="fas fa-music fa-lg"></i></span>
+            <span><i class="fas fa-cog fa-lg"></i></span>
+        </div>
+    </header>
+
+
+
+
     <nav class="nav">
         <ul class="nav__list">
             <li class="nav__btn">
