--- a/find.html
+++ b/find.html
@@ -58,6 +58,26 @@
             <h6 class="recommended-friends__title">Reccommended Friends</h6>
             <span>You have no recommended friends.</span>
         </div>
+        <div class="open-chat">
+            <div class="open-chat__header">
+                <h4>Open Chat</h4>
+                <span>Go to Openchat Home<i class="fas fa-chevron-right fa-xs"></i></span>
+                
+            </div>
+            <div class="open-post">
+                <div class="open-post_column">
+                    <h5 class="open-post__title">#BTS</h5>
+                    <h6 class="open-post__hashtags">#bts#army#friends</h6>
+                    <div class="open-post__members">
+                        <img src="https://lh3.googleusercontent.com/mkL9IhDIiqFBdaOyAESbM_R5yMD0baUUvpSkuzu9PbPPiO0XO35dHivQvQ8FQvcJWHu5s2CkPV0DFzM=w544-h544-l90-rj" />
+                        <span class="open-post__member-count">802members</span> 
+                        <div class="divider"></div>
+                        <span class="open-post__member-status">Active</span>
+                    </div>
+                </div>
+                <div class="open-post_column"></div>
+            </div>
+        </div>
     </main>
 
     
