Find Screen Part Four

--- a/find.html
+++ b/find.html
@@ -75,7 +75,14 @@
                         <span class="open-post__member-status">Active</span>
                     </div>
                 </div>
-                <div class="open-post_column"></div>
+                <div class="open-post_column"> 
+                   <div class="open-post__photo">
+                        <img src="https://lh3.googleusercontent.com/mkL9IhDIiqFBdaOyAESbM_R5yMD0baUUvpSkuzu9PbPPiO0XO35dHivQvQ8FQvcJWHu5s2CkPV0DFzM=w544-h544-l90-rj"/> 
+                        <div class="open-post__heart-count">
+                            <i class="fas fa-heart xs"></i><span>326</span>
+                        </div>
+                   </div>
+                </div>
             </div>
         </div>
     </main>
