--- a/chats.html
+++ b/chats.html
@@ -29,7 +29,7 @@
             <span><i class="fas fa-user fa-lg"></i></span>
             <span><i class="far fa-comment-dots fa-lg"></i></span>
             <span><i class="fas fa-music fa-lg"></i></span>
-            <span><i class="fas fa-cog fa-lg"></i></span>
+            <span><i class="fas fa-cog fa-lg"></i></span><div class="badge point"></div>
         </div>
     </header>
     
