--- a/friends.html
+++ b/friends.html
@@ -28,7 +28,7 @@
         <div class="screen-header__icons">
             <span><i class="fas fa-user fa-lg"></i></span>
             <span><i class="fas fa-music fa-lg"></i></span>
-            <span><i class="fas fa-cog fa-lg"></i></span>
+            <span><i class="fas fa-cog fa-lg"></i></span><div class="badge point"></div>
         </div>
     </header>
     <a id="friends-display-link" href="">
